# healplace-cardio-prototype

./: .gitignore  CLAUDE.md  CLINICAL_LOGIC_REVIEW.md  Dockerfile  HEALPLACE_CARDIO_OVERVIEW.md  Makefile  PRISMA_POC.md  QA_TESTING_GUIDE.md  REMAINING_TASKS_PLAN.md  biome.json  buildspec.yml  docker-compose.yml  imagedefinitions.json  package-lock.json  package.json  prisma.config.ts
.claude/: settings.json  settings.local.json
.github/workflows/: llm-tests.yml
adk-service/: .env.example  .gitignore  Dockerfile  main.py  pyproject.toml  requirements.txt
adk-service/agent/: cardio_agent.py  prompts.py  tools.py
adk-service/proto/: voice.proto
adk-service/server/: grpc_server.py
backend/: .env.example  Dockerfile  appspec.yml  biome.json  buildspec.yml  check_time.js  check_time.js.map  check_tz.js  check_tz.js.map  jest.config.mjs  package-lock.json  package.json  prisma.config.ts  query_sessions.js  query_sessions.js.map  tsconfig.build.json  tsconfig.build.tsbuildinfo  tsconfig.json
backend/ecs/: task-definition.json
backend/prisma/: seed.js  seed.js.map  seed.ts
docker/: entrypoint.sh
docs/: API_DOCS_MOBILE.md  API_DOCS_WEB.md  APP_DESCRIPTION.md  AUTH_MODULE.md  CLINICAL_LOGIC_REVIEW.md  DEPLOYMENT.md  HEALPLACE_CARDIO_OVERVIEW.md  HOMEPAGE_ABOUT_CONTENT.md  REMAINING_TASKS_PLAN.md
frontend/: Dockerfile  package-lock.json  package.json
prisma/: schema.prisma
src/: app.controller.spec.ts  app.module.ts  app.service.ts  main.ts  prisma.service.ts
test/: app.e2e-spec.ts  auth-otp.e2e-spec.ts  auth-social.e2e-spec.ts  chat.e2e-spec.ts
(+301 files in other folders)
